--- a/MCtests/Base.lproj/Main.storyboard
+++ b/MCtests/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive Messages Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eS-gJ-xI0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Receive Messages Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eS-gJ-xI0">
                                 <rect key="frame" x="120" y="28" width="360" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="360" id="UN2-k3-pvz"/>
@@ -27,14 +27,14 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PNp-Yg-s3A">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PNp-Yg-s3A">
                                 <rect key="frame" x="195" y="249" width="70" height="30"/>
                                 <state key="normal" title="Broadcast"/>
                                 <connections>
                                     <action selector="broadcastTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Qo-eK-0H5"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Message to Send" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DQx-O5-cGI">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="Message to Send" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DQx-O5-cGI">
                                 <rect key="frame" x="120" y="293" width="360" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -44,7 +44,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0g-NR-XDJ">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0g-NR-XDJ">
                                 <rect key="frame" x="355" y="249" width="54" height="30"/>
                                 <state key="normal" title="Receive"/>
                                 <connections>
@@ -54,13 +54,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DQx-O5-cGI" secondAttribute="bottom" constant="107" id="4wO-cZ-uWE"/>
                             <constraint firstItem="3eS-gJ-xI0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KhI-jc-mjz"/>
                             <constraint firstItem="3eS-gJ-xI0" firstAttribute="leading" secondItem="PNp-Yg-s3A" secondAttribute="trailing" constant="-145" id="ULh-j2-Hbd"/>
+                            <constraint firstItem="DQx-O5-cGI" firstAttribute="top" secondItem="PNp-Yg-s3A" secondAttribute="bottom" constant="14" id="Ub3-xr-s9J"/>
                             <constraint firstItem="DQx-O5-cGI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cad-06-plF"/>
                             <constraint firstItem="b0g-NR-XDJ" firstAttribute="leading" secondItem="PNp-Yg-s3A" secondAttribute="trailing" constant="90" id="faE-4Z-pTD"/>
                             <constraint firstItem="b0g-NR-XDJ" firstAttribute="top" secondItem="3eS-gJ-xI0" secondAttribute="bottom" constant="21" id="rxF-58-X3b"/>
-                            <constraint firstItem="3eS-gJ-xI0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="sCF-Mj-pAX"/>
                             <constraint firstItem="PNp-Yg-s3A" firstAttribute="top" secondItem="3eS-gJ-xI0" secondAttribute="bottom" constant="21" id="ugb-mk-oJY"/>
                         </constraints>
                     </view>
