--- a/MCtests/Base.lproj/Main.storyboard
+++ b/MCtests/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -20,25 +20,18 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Receive Messages Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eS-gJ-xI0">
                                 <rect key="frame" x="120" y="28" width="360" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="360" id="UN2-k3-pvz"/>
+                                    <constraint firstAttribute="width" constant="300" id="UN2-k3-pvz"/>
                                     <constraint firstAttribute="height" constant="200" id="dUJ-MG-hNy"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PNp-Yg-s3A">
-                                <rect key="frame" x="195" y="249" width="70" height="30"/>
-                                <state key="normal" title="Broadcast"/>
-                                <connections>
-                                    <action selector="broadcastTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Qo-eK-0H5"/>
-                                </connections>
-                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="Message to Send" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DQx-O5-cGI">
                                 <rect key="frame" x="120" y="293" width="360" height="200"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="360" id="Dul-Uw-gFe"/>
+                                    <constraint firstAttribute="width" constant="300" id="Dul-Uw-gFe"/>
                                     <constraint firstAttribute="height" constant="200" id="JLs-Ke-qi9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -51,16 +44,23 @@
                                     <action selector="receiveTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2fK-QN-YpP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PNp-Yg-s3A">
+                                <rect key="frame" x="142" y="249" width="70" height="30"/>
+                                <state key="normal" title="Broadcast"/>
+                                <connections>
+                                    <action selector="broadcastTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Qo-eK-0H5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="PNp-Yg-s3A" firstAttribute="top" secondItem="3eS-gJ-xI0" secondAttribute="bottom" constant="21" id="06c-jg-8ah"/>
                             <constraint firstItem="3eS-gJ-xI0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KhI-jc-mjz"/>
-                            <constraint firstItem="3eS-gJ-xI0" firstAttribute="leading" secondItem="PNp-Yg-s3A" secondAttribute="trailing" constant="-145" id="ULh-j2-Hbd"/>
+                            <constraint firstItem="3eS-gJ-xI0" firstAttribute="leading" secondItem="PNp-Yg-s3A" secondAttribute="trailing" constant="-105" id="ULh-j2-Hbd"/>
                             <constraint firstItem="DQx-O5-cGI" firstAttribute="top" secondItem="PNp-Yg-s3A" secondAttribute="bottom" constant="14" id="Ub3-xr-s9J"/>
                             <constraint firstItem="DQx-O5-cGI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cad-06-plF"/>
                             <constraint firstItem="b0g-NR-XDJ" firstAttribute="leading" secondItem="PNp-Yg-s3A" secondAttribute="trailing" constant="90" id="faE-4Z-pTD"/>
                             <constraint firstItem="b0g-NR-XDJ" firstAttribute="top" secondItem="3eS-gJ-xI0" secondAttribute="bottom" constant="21" id="rxF-58-X3b"/>
-                            <constraint firstItem="PNp-Yg-s3A" firstAttribute="top" secondItem="3eS-gJ-xI0" secondAttribute="bottom" constant="21" id="ugb-mk-oJY"/>
                         </constraints>
                     </view>
                     <connections>
