--- a/MCConnect/MCConnect/Base.lproj/Main.storyboard
+++ b/MCConnect/MCConnect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kFC-2o-wiW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kFC-2o-wiW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -24,48 +24,16 @@
                                     <segue destination="LuN-Vg-ySH" kind="embed" identifier="Embed" id="Jrz-G4-RIp"/>
                                 </connections>
                             </containerView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tt6-cU-WmB">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Tt3-ua-n60"/>
-                                    <barButtonItem style="plain" id="Foh-HX-ebr">
-                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="FBy-cP-bbo">
-                                            <rect key="frame" x="134" y="7" width="240" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                            <connections>
-                                                <outlet property="delegate" destination="mux-Hb-b03" id="ZXs-d4-X4b"/>
-                                            </connections>
-                                        </textField>
-                                    </barButtonItem>
-                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="VQ7-JT-4KD"/>
-                                    <barButtonItem title="Send" id="Gqw-Sl-ldA">
-                                        <connections>
-                                            <action selector="sendTapped:" destination="mux-Hb-b03" id="8H4-eM-ILh"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="aFk-Pe-kFf"/>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="agc-6p-8UC" firstAttribute="top" secondItem="tt6-cU-WmB" secondAttribute="bottom" id="1jT-bb-E8R"/>
-                            <constraint firstItem="tt6-cU-WmB" firstAttribute="leading" secondItem="h3r-RM-gVc" secondAttribute="leadingMargin" constant="-20" id="4AR-lz-im1"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="tt6-cU-WmB" secondAttribute="trailing" constant="-20" id="4Px-qm-EzW"/>
-                            <constraint firstItem="tt6-cU-WmB" firstAttribute="top" secondItem="Y3u-JY-kfp" secondAttribute="bottom" id="Epx-6S-5Lv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Y3u-JY-kfp" secondAttribute="trailing" constant="-20" id="KRX-uq-owb"/>
                             <constraint firstItem="Y3u-JY-kfp" firstAttribute="leading" secondItem="h3r-RM-gVc" secondAttribute="leadingMargin" constant="-20" id="Vjk-ER-glF"/>
-                            <constraint firstItem="tt6-cU-WmB" firstAttribute="centerX" secondItem="h3r-RM-gVc" secondAttribute="centerX" id="eXM-Km-AJ9"/>
+                            <constraint firstItem="agc-6p-8UC" firstAttribute="top" secondItem="Y3u-JY-kfp" secondAttribute="bottom" constant="44" id="eiU-1i-wlz"/>
                             <constraint firstItem="Y3u-JY-kfp" firstAttribute="top" secondItem="pzc-pO-Dpc" secondAttribute="bottom" constant="-64" id="qSs-1L-B0L"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dG0-bA-w93"/>
-                    <connections>
-                        <outlet property="MCtextField" destination="FBy-cP-bbo" id="H44-9b-Xr6"/>
-                        <outlet property="toolbar" destination="tt6-cU-WmB" id="FVp-ts-QO8"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IRE-7O-PAn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -84,7 +52,7 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bkk-dB-VOU" id="n2I-mQ-fgv">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
