messages appear from the top

--- a/Roar/Roar/Base.lproj/Main.storyboard
+++ b/Roar/Roar/Base.lproj/Main.storyboard
@@ -145,6 +145,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="textLabel" destination="zEq-FU-wV5" id="rjl-1J-Jea"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
